# haskell-programming

./: .gitignore  ChangeLog.md  Cipher.hs  README.md  ch09_database_processing.hs  ch10_warmup_and_review.hs  ch11_binary_tree.hs  ch11_huttons_razor.hs  ch11_huttons_razor_typeclass.hs  ch11_language_exercises.hs  ch11_phone_exercise.hs  ch12_binary_tree.hs  ch12_string_processing.hs  ch12_unfold.hs  ch13_modifying_code.hs  ch14_WordNumberTest.hs  ch14_using_quickcheck.hs  ch6_eq_instances.hs  ch6_match_types2.hs  ch7_fixing_dividedBy.hs  ch7_lets_write_code.hs  ch7_mcCarthy91.hs  ch8_TheFearfulSymetry.hs  ch8_ZippingExercises.hs  learn.hs  package.yaml  semigroup.hs
ch07/: CasePractice.hs  Recursion.hs
ch08/: EnumFromTo.hs  WordNumber.hs  WritingOwnStandardFunctions.hs
ch10/: RewritingFunctionsUsingFolds.hs
ch11/: AsPatterns.hs
ch12/: ItsOnlyNatural.hs  SmallLibForEither.hs  SmallLibForMaybe.hs
ch13/hangman/: hangman.cabal
ch13/hello/: hello.cabal
ch13/hello/src/: Addition.hs  Hello.hs
ch14/morse/src/: Morse.hs
ch15/: MaybeAnotherMonoid.hs
ch16/: InstancesOfFunc.hs  Rearrange.hs
ch17/: Constant.hs  Identity.hs  ListApplicativeExercise.hs  Lookups.hs
ch18/: ChapterExercises.hs  ChapterExercisesTest.hs  package.yaml
ch18/test/: Ch18_7_ChapterExercises_Test.hs
ch20/: 5LibraryFunctions.hs  ChapterExercises.hs  LibraryFunctions.hs
ch21/: ch21.cabal
ch21/src/: Main.hs
ch22/: CH22_6_ReadingComprehension.hs  Ch22.hs  ReaderPractice.hs
ch23/: ch23.hs
ch24/: .gitignore  ChangeLog.md  LICENSE  package.yaml
ch24/src/: LearnParsers.hs  ParseInteger.hs  ParseLog.hs  ParsePhone.hs  SemVer.hs  Text.Fractions.hs
ch25/: Compose.hs  SomethingCompletelyDifferent.hs
ch26/: EitherT.hs  FixTheCode.hs  StateT.hs  WrapItUp.hs  WriteTheCode.hs
ch26/hit-counter/: package.yaml
ch26/hit-counter/app/: Main.hs
ch26/morra/: .gitignore  package.yaml
ch26/morra/app/: Main.hs
ch28/benchmarking/: .gitignore  ChangeLog.md  package.yaml
ch28/blist/: CHANGELOG.md  LICENSE.md  README.md  package.yaml
ch28/blist/benchmark/: Main.hs
ch28/blist/executable/: Main.hs
ch28/blist/test-suite/: Main.hs
ch28/simple-queue/: CHANGELOG.md  README.md  package.yaml
ch28/simple-queue/benchmark/: Main.hs
ch28/simple-queue/test-suite/: Main.hs
ch29/vigenere/: CHANGELOG.md  README.md  package.yaml
ch29/vigenere/executable/: Main.hs
ch29/vigenere/test-suite/: Main.hs
ch31/fingerd/: .gitignore  LICENSE  fingerd.cabal
ch31/fingerd/src/: CreateDatabase.hs  Debug.hs  ImportUsers.hs  Main.hs  User.hs
functor/: write_functors.hs
hangman/src/: Main.hs
morse/: morse.cabal
morse/src/: Main.hs
src/: Ch18_7_ChapterExercises.hs  Ch18_7_ChapterExercises_Test.hs  Ch20_5_LibraryFunctions.hs
test/: Ch18_7_ChapterExercises_Test.hs  Runner.hs  Spec.hs
word-number/: word-number.cabal
word-number/test/: Spec.hs
