name:                fingerd
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/wafelj/fingerd#readme
license:             BSD3
license-file:        LICENSE
author:              Florjan Bartol
maintainer:          florjan.bartol@gmail.com
copyright:           2018 Florjan Bartol
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable debug
  ghc-options:         -Wall
  hs-source-dirs:      src
  main-is:             Debug.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , network

executable fingerd
  ghc-options:         -Wall
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       User
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , network
                     , sqlite-simple
                     , text
                     , cassava >= 0.5.1.0

executable importusers
  ghc-options:         -Wall
  hs-source-dirs:      src
  main-is:             ImportUsers.hs
  other-modules:       User
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , sqlite-simple
                     , cassava >= 0.5.1.0
                     , vector
                     , bytestring
                     , text

executable createdb
  ghc-options:         -Wall
  hs-source-dirs:      src
  main-is:             CreateDatabase.hs
  other-modules:       User
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , sqlite-simple
                     , bytestring
                     , cassava >= 0.5.1.0
                     , raw-strings-qq
                     , text
